fixes app reload on screen rotation abbreviates app name to AA Library adds ability to download images

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Amity Arena Data Library</string>
+    <string name="app_name">AA Library</string>
 </resources>
